# brainbase-kafka

./: .env.example  .gitignore  README.md  run_kafka.sh
.cursor/rules/: .cursorrules  project-spec.mdc
backend/: COMM_PROTOCOL.md  config.py  main.py  pyproject.toml
backend/agent/: agent.py
backend/tests/: conftest.py
backend/tests/milestone1/: interactive_agent_debug.py  test_agent.py  test_generate.py  test_generate.txt
backend/tests/milestone2/: diff_diagnostic.py  interactive_diff_debug.py  test_generate_diff.py
backend/tests/milestone3/: interactive_ws_debug.py  test_ws_api.py
backend/utils/: unified_diff.py
backend/validation/: __init__.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/layout/: Header.tsx
frontend/components/theme/: ThemeProvider.tsx
frontend/components/ui/: dialog.tsx
frontend/components/workspace/: ChatPanel.tsx  DiffViewer.tsx  Editor.tsx  FileExplorer.tsx  HelpModal.tsx  PromptPanel.tsx  Workspace.tsx
frontend/hooks/: use-toast.ts  useWebSocket.ts
frontend/lib/: monacoSetup.ts  types.ts  utils.ts
