[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "langchain>=0.0.27",
    "langchain-google-genai>=2.1.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.6",
]
